digitransit-component/packages/digitransit-component-favourite-bar/helpers/styles.scss
$zindex: base, map-container, footer, map-gradient, map-fullscreen-toggle,
  map-buttons, context-panel, search-panel, search-overlay, preferred-input, destination-input,
  viapoint-input-5, viapoint-input-4, viapoint-input-3, viapoint-input-2,
  viapoint-input-1, origin-input, search-input-focus, search-input-icon, rectangle, autosuggest-suggestion-container, front;

$favourite-highlight-background-color: #F4F4F5;

.button-shared {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  border: 1px solid #d9d9d9;
  cursor: pointer;
}

.favourite-container {
  display: flex;
  position: relative;
  z-index: 1;
  width: 100%;
  height: 48px;
  flex-shrink: 1;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  .favourite-content {
    @extend .button-shared;
    width: 42.25%;
    max-width: 169px;
    min-width: 140px;
    height: 100%;
    position: relative;

    .icon{
      display: flex;
      width: 50px;
      height: 100%;
      justify-content: center;
      padding: 12px 0;
    }

    .favourite-location {
      white-space: nowrap;
      overflow: hidden;
      text-align: start;
      width: 100%;
      flex-direction: row;

      .name {
        font-size: 15px;
        font-weight: 500;
        font-stretch: normal;
        font-style: normal;
        line-height: 1.33;
        letter-spacing: -0.6px;
        color: #333333;
      }

      .address {
        font-size: 12px;
        margin-right: 1rem;
        font-weight: normal;
        font-stretch: normal;
        font-style: normal;
        line-height: 1.67;
        letter-spacing: -0.48px;
        color: #666666;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }

  .expandButton {
    @extend .button-shared;
    height: 100%;
    writing-mode: vertical-lr;
    width: 2.5rem;
  }
}

.favourite-suggestion-container {
  position: relative;
  display: flex;
  justify-content: center;
  padding-top: 9px;
  .divider {
    display: block;
    height: 6px;
    background-color: #f4f4f5;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
  }
  .favourite-suggestion-list {
    max-height: 30vh;
    list-style-type: none;
    padding: 0;
    position: absolute;
    z-index: index($zindex, autosuggest-suggestion-container);
    width: 100%;
    margin: 0 auto;
    border-radius: 5px;
    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
    border: solid 1px rgba(0, 0, 0, 0.1);
    background-color: #ffffff;
    overflow-x: hidden;
    overflow-y: scroll;
  }
  .favourite-suggestion-item {
    cursor: pointer;
    &.highlighted {
      background-color: $favourite-highlight-background-color;
    }
    &.custom {
      color: #007ac9;
      font-size: 15px;
      font-weight: 500;
      letter-spacing: -0.5;
    }
  }
}

